--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -35,6 +35,8 @@
                         <th pSortableColumn="score">Puntaje<p-sortIcon field="career"></p-sortIcon>
                         </th>
                         <th pSortableColumn="calification">Calificación<p-sortIcon field="career"></p-sortIcon>
+                        <th pSortableColumn="calification">Merito<p-sortIcon field="merith"></p-sortIcon>
+
                         </th>
                     </tr>
                 </ng-template>
@@ -47,6 +49,8 @@
                         <td>{{student.modality}}</td>
                         <td>{{student.score}}</td>
                         <td>{{student.calification}}</td>
+                        <td>{{student.merith}}</td>
+
                     </tr>
                 </ng-template>
             </p-table>
