--- a/src/app/components/recoverdatalayout/recoverdatalayout.component.scss
+++ b/src/app/components/recoverdatalayout/recoverdatalayout.component.scss
@@ -26,3 +26,8 @@ section.extend{
     text-align: right;
     padding: 2rem;
 }
+.nameProject{
+    font-size: 1.2rem;
+    text-align: right;
+    font-weight: lighter;
+}
