--- a/src/app/pages/loadstudents/loadstudents.component.html
+++ b/src/app/pages/loadstudents/loadstudents.component.html
@@ -35,6 +35,9 @@
         
         <div class="p-3">
             <co-card class="mb-3">
+                TOTAL CARGADOS: {{computeTableStudent().length}}
+            </co-card>
+            <co-card class="mb-3">
                 <p-button styleClass="p-button-sm" (click)="reset()">Reset</p-button>
             </co-card>
             <co-card class="mb-3">
