--- a/src/app/pages/report/co-modality-list/co-modality-list.component.html
+++ b/src/app/pages/report/co-modality-list/co-modality-list.component.html
@@ -1,6 +1,6 @@
 <div style="display: grid; gap: 1rem;" *ngIf="modalitys.length > 1">
-    <co-card class="shadow-1">
-        <div style="display: grid; grid-template-columns: 2fr 1fr;" *ngFor="let item of charts">
+    <co-card class="shadow-1" *ngFor="let item of charts">
+        <div style="display: grid; grid-template-columns: 2fr 1fr;" >
             <p-chart type="bar" [data]="item.data"></p-chart>
             <p-chart type="doughnut" [data]="item.data"></p-chart>
         </div>
