--- a/src/app/pages/loadproject/loadproject.component.scss
+++ b/src/app/pages/loadproject/loadproject.component.scss
@@ -21,9 +21,25 @@ img{
     font-weight: lighter;
     margin-top: 4rem;
 }
-.item-project{
+.item-project-button{
     display: flex;
     gap: .5rem;
     align-items: center;
     cursor: pointer;
+}
+.project-content{
+    width: 100%; max-width: 400px; display: grid; gap: .5rem
+}
+.item-project{
+    position: relative;
+}
+.item-project button.b-edit{
+    position: absolute;
+    top: 50%;
+    transform: translate(50%, -50%);
+    right: 0;
+    display: none;
+}
+.item-project:hover button.b-edit{
+    display: block;
 }
