--- a/src/app/pages/loadproject/loadproject.component.html
+++ b/src/app/pages/loadproject/loadproject.component.html
@@ -1,10 +1,11 @@
 <section>
     <div class="project-content">
+        <div class="label-project mb-4">Proyectos de calificación</div>
         <co-card class="shadow-1 item-project-button" style="height: 60px;" (click)="newProject()">
             <i class="pi pi-plus"></i><span>Crear nuevo proyecto</span>
         </co-card>
         <div *ngFor="let item of projects" class="item-project">
-            <co-card class="item-project-button" (click)="setProject(item)">
+            <co-card class="shadow-1 item-project-button item-project-button-selectable" (click)="setProject(item)" [style]="{'border-color': listColor[item.unidad]}">
                 <i class="pi pi-box"></i><span>{{item.name}}</span>
             </co-card>
             <button pButton icon="pi pi-pencil" class="shadow-1 b-edit" (click)="editProject(item)"></button>
@@ -12,21 +13,20 @@
 
     </div>
     <div class="text-center">
-        <img src="/assets/present.svg" alt="s">
-        <div class="label-project">Proyectos de calificación</div>
+        <img src="/assets/office.png" alt="s">
     </div>
 </section>
     <p-dialog [header]="onNew == 1? 'CREAR PROYECTO': 'EDITAR: '+ currentEditProject.name" [visible]="onNew != 0" (visibleChange)="onNew = 0" [modal]="true"
         [style]="{width: '90%', 'max-width': '800px'}">
         <div class="py-2" style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
             <div class="f-c">
-                <img src="/assets/edit.svg" alt="edit file" style="max-height: 160px;">
+                <img src="/assets/table.png" alt="edit file" style="max-height: 160px;">
             </div>
             <div>
-                <span class="p-float-label">
-                    <input id="float-input" type="text" pInputText [(ngModel)]="currentEditProject.name">
+                <div class="p-float-label">
+                    <input id="float-input" type="text" pInputText [(ngModel)]="currentEditProject.name" style="width: 100%;">
                     <label for="float-input">Nombre del proyecto</label>
-                </span>
+                </div>
                 <div class="mt-4">
                     <h4 class="mb-4">Elegir unidad</h4>
                     <div class="field-radiobutton">
