--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -84,7 +84,7 @@
             </div>
             <co-card class="shadow-1 mt-4">
                 <div class="mb-4">
-                    <h3>Total postulantes por carrera</h3>
+                    <h3>Total postulantes por carrera: {{studentInfoList.length}}</h3>
                 </div>
                 <div style="display: grid; grid-template-columns: 2fr 1fr;">
                     <p-chart type="bar" [data]="data"></p-chart>
