--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,6 +53,11 @@ body{
 .filter-white{
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(127deg) brightness(109%) contrast(102%);
 }
+
+.p-dialog{
+    border-radius: .5rem;
+    overflow: hidden;
+}
 /*
 .p-datatable .p-sortable-column.p-highlight:hover,
 .p-datatable .p-sortable-column:focus,
