--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,7 +31,9 @@ body{
     background-color: #11171a;
     border-radius: 10px;
   }
-  
+.resalt-text{
+    background-color: yellow;
+}
 .c{
     text-align: center;
 }
