--- a/src/app/pages/report/report.component.scss
+++ b/src/app/pages/report/report.component.scss
@@ -7,8 +7,9 @@
 }
 #general-view{
     padding: 1rem;
-    max-width: 1200px;
-    margin: 0 auto;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: 1fr 600px;
 }
 #careerListContainer{
     width: 100%;
